# spimex-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  update_db.py
src/: cache.py  download_file.py  loader.py  logger.py  models.py  parse_file.py  parser.py  scraper.py
src/api/: dependencies.py  routes.py  schemas.py
src/database/: connection.py  dependencies.py  models.py
src/processing/: data_parser.py  data_scraper.py  db_loader.py  db_updater.py  updater.py
src/scripts/: update_db.py
src/worker/: app.py  tasks.py
src/workers/: loader.py  updater.py
tests/: conftest.py  test_api.py  test_processing.py
tests/integration/: conftest.py  test_api.py  test_processing.py
tests/test_api/: conftest.py  test_endpoints.py
tests/test_processing/: test_processing.py
tests/unit/: test_cache.py  test_router.py  test_tasks.py
